# Plasma-Dissociation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/Molecule-Tests/: CH4.toml  M0L.toml  X.toml
assets/inputs/: T.TOML  test.json
src/: CreateGeometry.cpp  InputParser.cpp  InputParser.hpp  MoleculeProject.cpp  MoleculeProject.hpp  MoleculeTest.cpp  MoleculeTest.hpp  PlasmaDissociation.cpp  RunQChem.cpp  main.cpp  run.cpp  test.cpp
src/IOManagement/: CMakeLists.txt  TOMLReader.cpp  TOMLReader.hpp
src/IOManagers/: InputFile.cpp  InputFile.hpp  MoleculeTest.cpp  MoleculeTest.hpp  QChemConfig.cpp  QChemConfig.hpp  TOMLParser.cpp  TOMLParser.hpp
src/ProjectManagement/: CMakeLists.txt  MoleculeProject.cpp  MoleculeProject.hpp
src/QChemManagement/: QChemConfig.cpp  QChemConfig.hpp  QChemManagement.cpp  QChemManagement.hpp
src/run/: main.cpp
